# hotpotato

./: .copier-answers.yml  .flake8  README.md  design.md  pyproject.toml
smart_contracts/: hotpotato.py  lab.py
smart_contracts/artifacts/HelloWorld/: application.json  approval.teal  contract.json
smart_contracts/artifacts/HotPotato/: application.json  approval.teal  contract.json
