[tool.poetry]
name = "hotpotato"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["SilentRhetoric <dev@silentrhetoric.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beaker-pyteal = { git = "https://github.com/algorand-devrel/beaker", branch = "v1" }

[tool.poetry.group.dev.dependencies]
pip-audit = "*"
black = {extras = ["d"], version = "*"}
flake8 = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.pytest.ini_options]
pythonpath = ["smart_contracts", "tests"]


[tool.mypy]
files = "smart_contracts/"
python_version = "3.10"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_untyped_defs = false
strict_equality = true

